--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
         </div>
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
+
+      <!-- spinner -->
+      <div id="loading-spinner" class="m-5 d-flex justify-content-center  d-none">
+        <div class="spinner-border text-success" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div>
+
       <div class="row gallery">
 
       </div>
     </section>
+
+
     <!-- slider -->
     <div class="main">
       <section class="mt-5" id="sliders">
