--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
       </div>
 
       <!-- spinner -->
-      <div id="loading-spinner" class="m-5 d-flex justify-content-center d-none">
-        <div class="spinner-border text-success" role="status">
-          <span class="sr-only">Loading...</span>
+      <div id="loading-spinner">
+      
+          <div class="spinner-border text-success text-center d-none  m-5" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
         </div>
-      </div>
 
       <div class="row gallery">
 
