--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
       </div>
 
       <!-- spinner -->
-      <div id="loading-spinner">
-      
-          <div class="spinner-border text-success text-center d-none  m-5" role="status">
-            <span class="sr-only">Loading...</span>
-          </div>
+      <div id="loading-spinner" class="m-5">
+        <div class="spinner-border text-success text-center d-none" role="status">
+          <span class="sr-only">Loading...</span>
         </div>
+      </div>
 
       <div class="row gallery">
 
